# gpu-parallel-recommender-system

./: CMakeLists.txt  Makefile  README.md  Stats.ods  main.cpp  misc_utils.cpp  misc_utls.h  ratings_util.cpp  ratings_util.h  recommendations_gold.cpp  recommendations_gold.h  recommendations_kernel.cu  recommendations_kernel.h  similarity_gold.cpp  similarity_gold.h  user-ids.txt
data/: movies.csv  ratings-debug.csv  ratings.csv
